tests/csgrep/68-gcc-parser-cppcheck-iterator1-stdin.txt
/builddir/build/BUILD/libprelude-5.2.0/bindings/ruby/Prelude.cxx: In function 'int IDMEFValue_to_SWIG(VALUE, const Prelude::IDMEFValue&, void*, VALUE*)': <--[g++]
/builddir/build/BUILD/libprelude-5.2.0/bindings/ruby/Prelude.cxx:4659:58: warning: enum constant in boolean context [-Wint-in-bool-context] <--[g++]
 4659 |                 else if ( t == IDMEF_DATA_TYPE_UINT32 || IDMEF_DATA_TYPE_INT )
      |                                                          ^~~~~~~~~~~~~~~~~~~
/builddir/build/BUILD/libprelude-5.2.0/bindings/ruby/Prelude.cxx:3144: error: invalidIterator1(CWE-664): Invalid iterator: sb <--[cppcheck]
/builddir/build/BUILD/libprelude-5.2.0/bindings/ruby/Prelude.cxx:2487: error: uninitvar(CWE-457): Uninitialized variable: v <--[cppcheck]
/builddir/build/BUILD/libpmemobj-cpp-1.12/tests/concurrent_hash_map/concurrent_hash_map_layout.cpp: internal warning: child 13758 timed out after 30s <--[cppcheck]
/builddir/build/BUILD/libpmemobj-cpp-1.12/tests/external/libcxx/array/iterators.pass.cpp:149: warning: mismatchingContainerExpression(CWE-664): Iterators to containers from different expressions 'static_cast<const pmem::obj::array < int , 5 >&>(c)' and 'c' are used together. <--[cppcheck]
/builddir/build/BUILD/libpmemobj-cpp-1.12/tests/external/libcxx/array/iterators.pass.cpp:156: warning: mismatchingContainerExpression(CWE-664): Iterators to containers from different expressions 'static_cast<const pmem::obj::array < int , 5 >&>(c)' and 'c' are used together. <--[cppcheck]
/builddir/build/BUILD/libpmemobj-cpp-1.12/tests/external/libcxx/basic_string/string.modifiers/string_replace/size_size_string_size_size.pass.cpp: internal warning: child 19752 timed out after 30s <--[cppcheck]
/builddir/build/BUILD/libpmemobj-cpp-1.12/tests/external/libcxx/vector/vector.cons/move.pass.cpp:85: error: iterators1(CWE-664): Same iterator is used with different containers 'r.c1' and 'r.c2'. <--[cppcheck]
/builddir/build/BUILD/libpmemobj-cpp-1.12/tests/external/libcxx/string.view/string.view.ops/compare.size_size_sv_size_size.pass.cpp: internal warning: child 29213 timed out after 30s <--[clang++]
